tests/integration/fail/equating_fns_lhs.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::EqError'
let f = fun x => x in
f == 1